@startuml

title __VIEW's Class Diagram__\n

      class no.ntnu.idi.apollo69.view.GameView {
          - shapeRenderer : ShapeRenderer
          - spriteBatch : SpriteBatch
          - stage : Stage
          + GameView()
          + hide()
          + render()
          + show()
      }
      class no.ntnu.idi.apollo69.view.LobbyView {
          - backgroundTexture : Texture
          - spriteBatch : SpriteBatch
          - stage : Stage
          - themeMusic : Music
          + LobbyView()
          + dispose()
          + hide()
          + pause()
          + render()
          + resize()
          + resume()
          + show()
          - getFakeHighScoreList()
      }
      class no.ntnu.idi.apollo69.view.MainMenuView {
          - backgroundTexture : Texture
          - spriteBatch : SpriteBatch
          - stage : Stage
          + MainMenuView()
          + dispose()
          + hide()
          + pause()
          + render()
          + resize()
          + resume()
          + show()
      }
      class no.ntnu.idi.apollo69.view.MatchmakingView {
          - bitmapFont : BitmapFont
          - spriteBatch : SpriteBatch
          - stage : Stage
          + MatchmakingView()
          + dispose()
          + hide()
          + pause()
          + render()
          + resize()
          + resume()
          + show()
          - handleInput()
      }

  no.ntnu.idi.apollo69.view.GameView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.GameView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.GameView o-- no.ntnu.idi.apollo69.controller.GameController
  no.ntnu.idi.apollo69.view.GameView o-- no.ntnu.idi.apollo69.model.GameModel
  no.ntnu.idi.apollo69.view.LobbyView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.LobbyView .up.|> no.ntnu.idi.apollo69.Variables
  no.ntnu.idi.apollo69.view.LobbyView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.LobbyView o-- no.ntnu.idi.apollo69.controller.LobbyController
  no.ntnu.idi.apollo69.view.LobbyView o-- no.ntnu.idi.apollo69.model.LobbyModel
  no.ntnu.idi.apollo69.view.MainMenuView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.MainMenuView .up.|> no.ntnu.idi.apollo69.Variables
  no.ntnu.idi.apollo69.view.MainMenuView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.MainMenuView o-- no.ntnu.idi.apollo69.controller.MainMenuController
  no.ntnu.idi.apollo69.view.MainMenuView o-- no.ntnu.idi.apollo69.model.MainMenuModel
  no.ntnu.idi.apollo69.view.MatchmakingView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.MatchmakingView o-- no.ntnu.idi.apollo69.controller.MatchmakingController
  no.ntnu.idi.apollo69.view.MatchmakingView o-- no.ntnu.idi.apollo69.model.MatchmakingModel

@enduml
